--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <artifactId>artifactId</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>java-web-sample</name>
+  <name>java-web-sample-test</name>
   <build>
-    <finalName>java-web-sample</finalName>
+    <finalName>java-web-sample-test</finalName>
   </build>
 </project>
